--- a/app/src/main/res/layout/activity_delete_user_tr.xml
+++ b/app/src/main/res/layout/activity_delete_user_tr.xml
@@ -41,46 +41,40 @@
 
 
         <EditText
-            android:drawableLeft="@drawable/ic_person_black_24dp"
-            android:drawablePadding="10dp"
+            android:id="@+id/dusernametr"
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="40sp"
+            android:drawableLeft="@drawable/ic_person_black_24dp"
+            android:drawablePadding="10dp"
             android:hint="@string/usernametr"
             android:inputType="text"
             android:maxLines="1" />
 
 
         <EditText
-            android:drawableLeft="@drawable/ic_lock_black_24dp"
-            android:drawablePadding="10dp"
+            android:id="@+id/dpasstr"
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10sp"
+            android:drawableLeft="@drawable/ic_lock_black_24dp"
+            android:drawablePadding="10dp"
             android:hint="@string/passtr"
             android:inputType="textPassword" />
 
-        <EditText
-            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
-            android:drawablePadding="10dp"
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
-            android:hint="@string/conpasstr"
-            android:inputType="textPassword" />
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/btndeleteTr"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="35dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/buttonstyle4tr"
                 android:backgroundTint="#eb262f"
-                android:onClick="onDelete"
                 android:text="DELETE"
                 android:textColor="#FFF" />
 
